# fand

./: Cargo.toml  README.md
src/: cli.rs  computed.rs  config.rs  fan.rs  main.rs  signal_handler.rs  source.rs
src/fan/: pwm.rs
src/source/: file.rs  nvidia.rs
